feature: GH account sync

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.0.0",
     "ag-grid-angular": "^32.3.3",
     "bootstrap": "^5.3.3",
+    "ngx-loader-indicator": "^19.0.0",
     "octokit": "^4.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
