cell renderer added

--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "ag-grid-angular": "^32.3.3",
     "bootstrap": "^5.3.3",
     "flat": "^6.0.1",
+    "lottie-web": "^5.12.2",
+    "ngx-lightbox": "^3.0.0",
     "ngx-loader-indicator": "^19.0.0",
+    "ngx-lottie": "^13.0.0",
+    "ngx-socket-io": "^4.8.2",
     "octokit": "^4.0.2",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
